bugfix: processed_geojson really gets transmitted to R-backend & add structure for demoprocess endpoint
