# app/node-backend/openapi.json
@@ -90,6 +90,45 @@
         }
       }
     },
+    "/api/demo_classify": {
+      "post": {
+        "summary": "Train model and classify map with specific demo-parameters for quick results",
+        "description": "Takes parameter in JSON-file, trains model on R-Backend and response with a JSON-File which contains the model itself and the classification results",
+        "requestBody": {
+          "description": "JSON-file for training and classification",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ClassifyRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful classification",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ClassifyResponse"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Invalid requestBody",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/getdemodata": {
       "get": {
         "summary": "Get an example Json-Request for classify-Endpoint",
